# lydkontroll

./: .gitignore  .prettierignore  AGENTS.md  CLA.md  CONTRIBUTING.md  DESIGN.md  HUMAN_README.md  MOBILE_LAYOUT_PROTOTYPES.md  NOTICE  PLAN.md  README.md  RELEASE_RUNBOOK.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.agents/: CANDIDATE.md  DECISIONS.md  HANDOFF.md  PROGRESS.md  PROJECT.md  PROJECT_WORKFLOWS.md  README.md  REHEARSAL.md  STATE.md
.agents/audits/: TASK-024-public-readiness-audit.md
.agents/plans/: TASK-001-foundation-architecture.md  TASK-004-audio-engine.md  TASK-005-command-state-core.md  (+12 more)
.cargo/: config.toml
scripts/: check-generated.mjs  check-icon-alpha.mjs  check-project-workflows.mjs  check-public-readiness.mjs  check-release-tree.mjs  ralph.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/audio/: mod.rs
src-tauri/src/adapters/network/: discovery.rs  mod.rs  server.rs
src-tauri/src/adapters/persistence/: mod.rs
src-tauri/src/adapters/tauri/: mod.rs
src-tauri/src/application/: mod.rs  protocol.rs  service.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/ports/: mod.rs
src-tauri/tests/: app_smoke.rs  application_service.rs  audio_engine.rs  persistence.rs
tests/: README.md
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+50 files in other folders)
