[package]
name = "lydkontroll"
version = "0.1.0"
description = "Reliable local sound control for Marius and Wenche's wedding"
authors = ["Marius and Wenche"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "lydkontroll_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "pcm", "wav"] }
tauri = { version = "2.11.3", features = ["test"] }
thiserror = "2"
ts-rs = "12.0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
